+ Scrollbar issue fixed

--- a/server/nodejs/resources/css/survey_view.css
+++ b/server/nodejs/resources/css/survey_view.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -21,6 +26,7 @@ body {
     padding: 20px;
     height: 100%;
     overflow-y: auto;
+
 }
 
 /* Search Bar Styles */
